<resources>
    <string name="app_name">Hello Click</string>
    <string name="input">Hello World, how are you doing?</string>
    <string name="click">Click me!</string>
    <string name="reset">Reset</string>
    <string name="reverse">Reverse</string>
    <string name="result">0</string>
    <string name="big">BIG</string>
    <string name="normal">Normal</string>
    <string name="size">Increment size</string>

</resources>


