<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.epita.helloclick.MainActivity">

    <TextView
        android:id="@+id/text_hello"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
    <Button
        android:id="@+id/button_click"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/click"
        app:layout_constraintRight_toLeftOf="@+id/button_reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hello" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintRight_toLeftOf="@+id/button_reverse"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/button_click"
        app:layout_constraintBottom_toBottomOf="@id/button_click" />

    <Button
        android:id="@+id/button_reverse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reverse"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@+id/button_reset"
        app:layout_constraintBottom_toBottomOf="@id/button_reset" />

    <TextView
        android:id="@+id/text_result"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/result"
        android:background="#FF0000"
        app:layout_constraintRight_toRightOf="@id/button_reverse"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_reverse"
        />

    <Button
        android:id="@+id/button_normal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_result"

        app:layout_constraintRight_toRightOf="@id/text_result" />

    <Button
        android:id="@+id/button_big"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/big"
        app:layout_constraintTop_toBottomOf="@+id/button_normal"
        app:layout_constraintRight_toRightOf="@id/button_normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_normal"
        app:layout_constraintBottom_toTopOf="@id/button_big"
        app:layout_constraintLeft_toLeftOf="parent"
        />





</android.support.constraint.ConstraintLayout>
